--- a/CoolBlue/App.config
+++ b/CoolBlue/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="coolBlue.Properties.Settings.coolblueConnectionString"
+            connectionString="Data Source=SAGER10\SAGER2017;Initial Catalog=coolblue;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
