--- a/CoolBlue/Properties/Settings.settings
+++ b/CoolBlue/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="coolblueConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=sager10;Initial Catalog=coolblue;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=SAGER10\SAGER2017;Initial Catalog=coolblue;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=sager10;Initial Catalog=coolblue;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=SAGER10\SAGER2017;Initial Catalog=coolblue;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
