--- a/CoolBlue/coolBlue.csproj
+++ b/CoolBlue/coolBlue.csproj
@@ -134,6 +134,9 @@
     <Compile Include="editClass.xaml.cs">
       <DependentUpon>editClass.xaml</DependentUpon>
     </Compile>
+    <Compile Include="editCurrency.xaml.cs">
+      <DependentUpon>editCurrency.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EditDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -218,6 +221,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="editClass.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="editCurrency.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
