--- a/CoolBlue/App.config
+++ b/CoolBlue/App.config
@@ -16,7 +16,7 @@
     <userSettings>
         <DXThemeManager>
             <setting name="ApplicationThemeName" serializeAs="String">
-                <value>Office2016Black</value>
+                <value>Office2016BlackSE</value>
             </setting>
         </DXThemeManager>
     </userSettings>
