--- a/CoolBlue/coolBlue.csproj
+++ b/CoolBlue/coolBlue.csproj
@@ -434,6 +434,12 @@
   <ItemGroup>
     <Resource Include="edit_property.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="add-icon32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="trashcan3_32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
