--- a/CoolBlue/coolBlue.csproj
+++ b/CoolBlue/coolBlue.csproj
@@ -449,6 +449,12 @@
   <ItemGroup>
     <Resource Include="trashcan3_32.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Report_16x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Report_32x32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
