--- a/CoolBlue/coolBlue.csproj
+++ b/CoolBlue/coolBlue.csproj
@@ -176,6 +176,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>RegisterDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="reports\REPORT_ExpensedDetail.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="reports\REPORT_ExpensedDetail.Designer.cs">
+      <DependentUpon>REPORT_ExpensedDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="reports\REPORT_tags.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -315,6 +321,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reports\REPORT_ExpensedDetail.resx">
+      <DependentUpon>REPORT_ExpensedDetail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="reports\REPORT_tags.resx">
       <DependentUpon>REPORT_tags.cs</DependentUpon>
