--- a/CoolBlue/App.config
+++ b/CoolBlue/App.config
@@ -17,7 +17,7 @@
     <userSettings>
         <coolBlue.Properties.Settings>
             <setting name="server" serializeAs="String">
-                <value>Sager10</value>
+                <value>SAGER10\SAGER2017</value>
             </setting>
             <setting name="username" serializeAs="String">
                 <value>sa</value>
