--- a/CoolBlue/App.config
+++ b/CoolBlue/App.config
@@ -7,7 +7,9 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="coolBlue.Properties.Settings.coolblueConnectionString" connectionString="Data Source=SAGER10\SAGER2017;Initial Catalog=coolblue;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="coolBlue.Properties.Settings.coolblueConnectionString"
+            connectionString="Data Source=main3;Initial Catalog=coolblue;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
@@ -15,7 +17,7 @@
     <userSettings>
         <coolBlue.Properties.Settings>
             <setting name="server" serializeAs="String">
-                <value>SAGER10\SAGER2017</value>
+                <value>main3</value>
             </setting>
             <setting name="username" serializeAs="String">
                 <value>sa</value>
