--- a/CoolBlue/App.config
+++ b/CoolBlue/App.config
@@ -8,7 +8,7 @@
     </configSections>
     <connectionStrings>
         <add name="coolBlue.Properties.Settings.coolblueConnectionString"
-            connectionString="Data Source=main3;Initial Catalog=coolblue;Integrated Security=True"
+            connectionString="Data Source=main3;Initial Catalog=coolblue;Integrated Security=True;TrustServerCertificate=True;Encrypt=False"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
