--- a/CoolBlue/Properties/Settings.settings
+++ b/CoolBlue/Properties/Settings.settings
@@ -2,14 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="coolBlue.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="coolblueConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=main3;Initial Catalog=coolblue;Integrated Security=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=main3;Initial Catalog=coolblue;Integrated Security=True</Value>
-    </Setting>
     <Setting Name="server" Type="System.String" Scope="User">
       <Value Profile="(Default)">main3</Value>
     </Setting>
@@ -18,6 +10,14 @@
     </Setting>
     <Setting Name="password" Type="System.String" Scope="User">
       <Value Profile="(Default)">Sq!lsp!a123</Value>
+    </Setting>
+    <Setting Name="coolblueConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=main3;Initial Catalog=coolblue;Integrated Security=True;TrustServerCertificate=True;Encrypt=False&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=main3;Initial Catalog=coolblue;Integrated Security=True;TrustServerCertificate=True;Encrypt=False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
