--- a/CoolBlue/App.config
+++ b/CoolBlue/App.config
@@ -25,6 +25,12 @@
             <setting name="password" serializeAs="String">
                 <value>Sq!lsp!a123</value>
             </setting>
+            <setting name="nCompanyID" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="nAccountingPeriodID" serializeAs="String">
+                <value>1001</value>
+            </setting>
         </coolBlue.Properties.Settings>
         <DXThemeManager>
             <setting name="ApplicationThemeName" serializeAs="String">
